# rustlab-2024-ratatui

./: .gitignore  Cargo.toml  Dockerfile  README.md  presentation.md
.github/workflows/: ci.yml
assets/: recipe.md
common/: Cargo.toml
common/src/: command.rs  events.rs  file.rs  lib.rs  room_name.rs  server_command.rs  username.rs
server/: Cargo.toml
server/src/: connection.rs  lib.rs  logger.rs  main.rs  room.rs  rooms.rs  server.rs  user.rs  users.rs
tui/: Cargo.toml
tui/src/: app.rs  args.rs  logger.rs  main.rs  message_list.rs  popup.rs  room_list.rs  ui.rs
tui/src/snapshots/: tui__tests__render_app.snap
tui/test_data/: code.md
workshop/: 00_intro.md  01_init.md  02_tui.md  03_connection.md  04_message_list.md  05_text_input.md  06_room_list.md  07_help_popup.md  08_file_explorer.md  09_image_preview.md  10_markdown_preview.md  11_effects.md  12_logging.md  13_testing.md  14_end.md
