[package]
name = "common"
version = "1.0.0"
edition = "2021"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
publish = false

[dependencies]
chrono = "0.4.38"
petname = "2.0.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
strum = "0.26.3"
strum_macros = "0.26.3"
