[package]
name = "server"
version = "1.0.0"
edition = "2021"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
publish = false

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
clap-verbosity-flag = "2.2.2"
common = { path = "../common" }
dashmap = "6.1.0"
futures = "0.3.30"
itertools = "0.13.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }
petname = "2.0.2"
serde_json = "1.0.132"
tokio-stream = "0.1"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
