[package]
name = "tui"
version = "0.1.0"
edition = "2021"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
publish = false

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.28.1"
textwrap = "0.16.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tui-textarea = "0.6.1"

common = { path = "../common" }
tui-tree-widget = "0.22.0"
ratatui-explorer = "0.1.2"
base64 = "0.22.1"
ratatui-image = "2.0.1"
image = "0.25.4"
