[package]
name = "tui"
version = "0.1.0"
edition = "2021"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
publish = false

[dependencies]
ratatui = "0.28.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
anyhow = "1.0.90"

tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.31"
