[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
anyhow = "1.0.90"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.31"
clap = { version = "4.5.20", features = ["derive"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
common = { version = "1.0.0", path = "../common" }
tui-textarea = "0.6.1"
tui-tree-widget = "0.22.0"
ratatui-explorer = "0.1.2"
base64 = "0.22.1"
ratatui-image = "2.0.1"
image = "0.25.4"
